# odin

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  NOTICE  README.md  api.md  bump.sh
.github/workflows/: dockerhub-dev.yml  dockerhub-tag.yml  dockerhub.yml  pypi.yml
docs/: commands.md  odin-from-scratch.md  pipelines.md
src/midgard/: Dockerfile.cuda100  Dockerfile.cuda101  README.md  api.md  requirements.txt  setup.py
src/midgard/midgard/server/: __main__.py  encoder.py
src/midgard/midgard/server/controllers/: midgard_controller.py
src/midgard/midgard/server/models/: __init__.py  base_model_.py  ecc_mode_info.py  fb_memory_usage_gpu.py  gpu_clock_info.py  gpu_device_info.py  gpu_device_results.py  gpu_device_wrapper_definition.py  gpu_max_clock_info.py  gpu_power_reading_info.py  gpu_temperature_info.py  gpu_utilization_info.py  pci_info_gpu.py
src/midgard/midgard/server/swagger/: swagger.yaml
src/midgard/midgard/server/test/: __init__.py  test_midgard_controller.py
src/odin/: .dockerignore  .pylintrc  Dockerfile  Dockerfile.base  setup.cfg  setup.py
src/odin-api/: __init__.py  setup.cfg
src/odin-api/muninn/: __init__.py  auth.py
src/odin-api/muninn/client/: authenticate.py  cleanup.py  create.py  data.py  events.py  gpus.py  logs.py  ping.py  push.py  run.py  show.py  status.py  user.py
src/odin-api/odin/api/: __init__.py  formatting.py
src/odin-api/odin/api/client/: authenticate.py  cleanup.py  create.py  data.py  events.py  gpus.py  logs.py  ping.py  push.py  run.py  show.py  status.py  user.py
src/odin-http/: Dockerfile  main.py  requirements.txt  setup.py
src/odin-http/odin/http/: models.py  orm.py  utils.py
src/odin-http/swagger_server/: __main__.py
src/odin-http/swagger_server/controllers/: odin_controller.py
src/odin-http/swagger_server/models/: __init__.py  auth_definition.py  auth_response_definition.py  config_definition.py  event_definition.py  event_results.py  job_definition.py  job_results.py  job_wrapper_definition.py  key_value_definition.py  pipeline_cleanup_definition.py  pipeline_cleanup_results.py  pipeline_definition.py  pipeline_results.py  pipeline_wrapper_definition.py  resource_definition.py  task_definition.py  task_status_definition.py  upload_definition.py  user_definition.py  user_results.py  user_wrapper_definition.py  volume_mount_definition.py
src/odin-http/swagger_server/specs/: odin.yaml
src/odin-http/swagger_server/test/: __init__.py  test_odin_controller.py
src/odin/odin/: __init__.py  chores.py  cleanup.py  core.py  dag.py  executor.py  generate.py  k8s.py  serve.py  status.py  store.py  version.py
src/odin/odin/addons/: demo_chore_addon.py  mead_eval_slack.py
src/odin/odin/client/: __init__.py  authenticate.py  cleanup.py  create.py  data.py  events.py  generate.py  gpus.py  logs.py  ping.py  push.py  run.py  show.py  status.py  user.py
src/odin/odin/handlers/: deployment.py  elasticjob.py  job.py  mpijob.py  pod.py  pytorchjob.py  service.py  tfjob.py
src/odin/odin/model/: selector.py
src/odin/odin/mongo/: __init__.py  store.py
src/odin/odin/postgres/: __init__.py  store.py
src/odin/odin/utils/: auth.py  formatting.py  hash.py  render.py  yaml_utils.py
src/odin/tests/: datasets.json  embeddings.json  sst2.yml  test_chores.py  test_core.py  test_dag.py  test_export_policy.py  test_generate.py  test_pipeline.py  test_pod_0.json  test_pod_0.pkl  test_pod_1.json  test_pod_1.pkl  test_pod_2.json  test_pod_2.pkl  test_pod_3.json  test_pod_3.pkl  test_pod_4.json  test_podspecs.py  test_rewrites.py
