[metadata]
NAME = odin-api 
version = 0.6.4
description = Odin Client API
author = interactions
author_email = odin@interactions.com
license = Apache 2.0
keywords=
    deep-learning
    kubernetes
    ml-ops
long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    ../LICENSE
    ../NOTICE
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =.
packages = odin.api 
scripts =
    odin/api/client/authenticate.py
    odin/api/client/cleanup.py
    odin/api/client/create.py
    odin/api/client/data.py
    odin/api/client/events.py
    odin/api/client/gpus.py
    odin/api/client/logs.py
    odin/api/client/ping.py
    odin/api/client/push.py
    odin/api/client/run.py
    odin/api/client/show.py
    odin/api/client/user.py

install_requires =
    numpy
    mead-baseline
    websockets
    requests
    requests-async
    kubernetes
    pyyaml >= 5.1
    prompt_toolkit >= 2.0.0

[options.entry_points]
console_scripts =
    odin-auth = odin.api.client.authenticate:main
    odin-cleanup = odin.api.client.cleanup:main
    odin-create = odin.api.client.create:main
    odin-data = odin.api.client.data:main
    odin-events = odin.api.client.events:main
    odin-gpus = odin.api.client.gpus:main
    odin-logs = odin.api.client.logs:main
    odin-ping = odin.api.client.ping:main
    odin-push = odin.api.client.push:main
    odin-run = odin.api.client.run:main
    odin-show = odin.api.client.show:main
    odin-user = odin.api.client.user:main

[options.extras_require]
test:
    pytest

