[metadata]
NAME = odin-api 
version = 0.7.6
description = Odin Client API (Muninn)
author = interactions
author_email = odin@interactions.com
license = Apache 2.0
keywords=
    deep-learning
    kubernetes
    ml-ops
long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    ../LICENSE
    ../NOTICE
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find: 
scripts =
    muninn/client/authenticate.py
    muninn/client/cleanup.py
    muninn/client/create.py
    muninn/client/data.py
    muninn/client/events.py
    muninn/client/gpus.py
    muninn/client/logs.py
    muninn/client/ping.py
    muninn/client/push.py
    muninn/client/run.py
    muninn/client/show.py
    muninn/client/user.py

install_requires =
    numpy
    mead-baseline
    websockets
    requests
    requests-async
    pyyaml >= 5.1
    prompt_toolkit >= 2.0.0

[options.entry_points]
console_scripts =
    odin-auth = muninn.client.authenticate:main
    odin-cleanup = muninn.client.cleanup:main
    odin-create = muninn.client.create:main
    odin-data = muninn.client.data:main
    odin-events = muninn.client.events:main
    odin-gpus = muninn.client.gpus:main
    odin-logs = muninn.client.logs:main
    odin-ping = muninn.client.ping:main
    odin-push = muninn.client.push:main
    odin-run = muninn.client.run:main
    odin-show = muninn.client.show:main
    odin-status = muninn.client.status:main
    odin-user = muninn.client.user:main

[options.extras_require]
test:
    pytest

